# docs/swagger.json
@@ -12,7 +12,7 @@
         }
     },
     "paths": {
-        "/check-field": {
+        "/availability/check-field": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -21,7 +21,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Validation"
+                    "Availability"
                 ],
                 "summary": "Checks if the email is not already registered on the platform.",
                 "parameters": [
@@ -106,58 +106,7 @@
                 }
             }
         },
-        "/login": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Authentication"
-                ],
-                "summary": "Gives the `access token` and `refresh token` that is needed to interact with the platform, along with all user's profiles ids.",
-                "parameters": [
-                    {
-                        "description": "LogIn Payload",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/contracts.LoginRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Get Access Credentials",
-                        "schema": {
-                            "$ref": "#/definitions/contracts.AuthResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid parameters",
-                        "schema": {
-                            "$ref": "#/definitions/shared.ProblemDetailsExtendend"
-                        }
-                    },
-                    "401": {
-                        "description": "Authentication Failed",
-                        "schema": {
-                            "$ref": "#/definitions/shared.ProblemDetails"
-                        }
-                    },
-                    "500": {
-                        "description": "Server failed to provide an valid response",
-                        "schema": {
-                            "$ref": "#/definitions/shared.ProblemDetails"
-                        }
-                    }
-                }
-            }
-        },
-        "/profile": {
+        "/profiles": {
             "post": {
                 "security": [
                     {
@@ -171,7 +120,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Profiles"
+                    "Account"
                 ],
                 "summary": "Attach a profile to the `created account`.",
                 "parameters": [
@@ -213,7 +162,7 @@
                 }
             }
         },
-        "/refresh-token": {
+        "/profiles/me": {
             "get": {
                 "security": [
                     {
@@ -227,22 +176,14 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Access Credentials"
+                    "Account"
                 ],
-                "summary": "It receives the `refresh token` and validates it. Then, creates a new refresh token and access token revoking the other ones.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "switch access to (profile_id) or if not provided default to main profile",
-                        "name": "profile_id",
-                        "in": "query"
-                    }
-                ],
+                "summary": "Validate the provided `token` and returns success or failed weather the token was signed by the `public key`.",
                 "responses": {
                     "200": {
-                        "description": "Access Credentials",
+                        "description": "Token Payload",
                         "schema": {
-                            "$ref": "#/definitions/contracts.AuthResponse"
+                            "$ref": "#/definitions/contracts.AccountResponse"
                         }
                     },
                     "401": {
@@ -375,12 +316,7 @@
             }
         },
         "/token": {
-            "get": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
+            "post": {
                 "consumes": [
                     "application/json"
                 ],
@@ -388,24 +324,35 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Access Credentials"
+                    "Authentication"
                 ],
-                "summary": "Validate the provided `token` and returns success or failed weather the token was signed by the `public key`.",
+                "summary": "OAuth2 endpoints for authorization",
+                "parameters": [
+                    {
+                        "description": "LogIn Payload",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/contracts.LoginRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "Token Payload",
+                        "description": "Get Access Credentials",
                         "schema": {
-                            "$ref": "#/definitions/contracts.AccountResponse"
+                            "$ref": "#/definitions/contracts.AuthResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid parameters",
+                        "schema": {
+                            "$ref": "#/definitions/shared.ProblemDetailsExtendend"
                         }
                     },
                     "401": {
                         "description": "Authentication Failed",
-                        "schema": {
-                            "$ref": "#/definitions/shared.ProblemDetails"
-                        }
-                    },
-                    "403": {
-                        "description": "Don't have access to this resource",
                         "schema": {
                             "$ref": "#/definitions/shared.ProblemDetails"
                         }
@@ -499,6 +446,9 @@
             ],
             "properties": {
                 "email": {
+                    "type": "string"
+                },
+                "grant_type": {
                     "type": "string"
                 },
                 "password": {
